# visible-notifications

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  pyproject.toml
src/: Makefile  api.py  notification_rules.yml  notifications.yaml
src/app/: app_provider.py  exceptions.py  usecase.py
src/app/audit/: __init__.py  get_user_audit_use_case.py
src/app/events/: __init__.py  save_events_usecase.py
src/app/health/: __init__.py  exceptions.py  readiness_check_usecase.py
src/app/logging/: logger.py
src/app/notifications/: __init__.py  notification_intent.py  notification_rules_relay.py  notification_rules_relay_test.py  tasks.py  trigger_notifications_use_case.py  trigger_notifications_use_case_test.py
src/app/persistence/: event_repository.py  notification_history_record_repository.py  notification_repository.py  notification_rule_repository.py
src/app/queue/: __init__.py  event_queue.py
src/domain/: __init__.py  event.py  notification.py  notification_history_record.py  notification_rule.py  pipka.py
src/entrypoint/: api.py  notifications.py
src/infrastructure/: __init__.py  env_config.py  infrastructure_provider.py  settings.py
src/infrastructure/database/: dummy_db_checker.py
src/infrastructure/database/migrations/: alembic.ini  apply_migrations.py  env.py
src/infrastructure/database/migrations/versions/: 2026.01.18_03-08-42_042bc973139f_initial.py  2026.01.18_03-40-33_8c0e419f8ff8_initial.py  2026.01.18_04-09-48_3956115c32d9_initial.py  2026.01.18_04-30-09_4ed2c092b107_initial.py  2026.01.18_19-46-08_8eecd7f5d75a_initial.py  2026.01.18_23-41-20_6a025a1ace14_initial.py  2026.01.19_03-11-08_ece1f7f09878_notifications_history_created_at.py
src/infrastructure/database/persistence/: __init__.py  sqla_event_repository.py  sqla_notification_history_record_repository.py
src/infrastructure/database/postgres/: postgres_db_checker.py
src/infrastructure/database/sqlalchemy/: engine.py  session.py
src/infrastructure/database/sqlmodel/: engine.py
src/infrastructure/fastapi/: main.py
src/infrastructure/logging/: __init__.py  loguru_logger.py
src/infrastructure/staticyaml/: __init__.py  static_notification_repository.py  static_notification_rule_repository.py
src/infrastructure/taskiq/: __init__.py  broker.py  event_queue.py  messages.py
src/presentation/api/: conftest.py
src/presentation/api/audit/: __init__.py  audit_handlers.py  audit_handlers_test.py
src/presentation/api/events/: __init__.py  events_handlers.py  events_handlers_test.py
src/presentation/api/health/: __init__.py  controller.py  health_hadlers_test.py  health_handlers.py  health_handlers_test.py
