[project]
name = "visible-notify"
version = "0.1.0"
description = "A tool to react to an event stream with notifications in a configurable manner"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["fastapi[standard]>=0.128.0", "ruff>=0.14.13", "uvloop>=0.22.1"]

# ruff
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "ASYNC"]
ignore = ["B008", "E501"]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
