[project]
name = "visible-notify"
version = "0.1.0"
description = "A tool to react to an event stream with notifications in a configurable manner"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "dishka>=1.7.2",
    "fastapi[standard]>=0.128.0",
    "glom>=25.12.0",
    "httptools>=0.7.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytimeparse2>=1.7.1",
    "ruff>=0.14.13",
    "sqlalchemy>=2.0.0",
    "taskiq>=0.12.1",
    "taskiq-redis>=1.0.0",
    "testcontainers>=4.14.0",
    "uvloop>=0.22.1",
]

# ruff
[tool.ruff]
line-length = 88
target-version = "py314"
exclude = ["src/infrastructure/database/migrations/versions"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "ASYNC"]
ignore = ["B008", "E501"]
fixable = ["F401", "I"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["src"]
